--- a/wishDream_Web/src/main/resources/application.properties
+++ b/wishDream_Web/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.application.name=WishDream
 
+# logging
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.tomcat=INFO
