--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -14,12 +14,15 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.0.0",
+    "eslint-loader": "^2.1.2",
     "jquery": "^3.4.1",
+    "loadsh": "^0.0.4",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
+    "react-router": "^5.0.1",
     "sass-loader": "^7.1.0",
     "webpack": "^4.33.0",
     "webpack-dev-server": "^3.7.1",
