--- a/wishDream_Web/build.gradle
+++ b/wishDream_Web/build.gradle
@@ -33,6 +33,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	compileOnly 'org.projectlombok:lombok'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker'
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	annotationProcessor 'org.projectlombok:lombok'
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
