--- a/wishDream_Core/build.gradle
+++ b/wishDream_Core/build.gradle
@@ -8,13 +8,14 @@ ext {
 }
 
 apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'kr.co.wishDream'
 version = buildVersion
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = '11'
+targetCompatibility = '11'
 
 configurations {
 	developmentOnly
