--- a/wishDream_Web/src/main/resources/application.properties
+++ b/wishDream_Web/src/main/resources/application.properties
@@ -5,3 +5,12 @@ logging.level.root=WARN
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=DEBUG
 logging.level.tomcat=INFO
+
+# view
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.prefix=classpath:/static/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.template-resolver-order=0
+# development mode = false
+spring.thymeleaf.cache=false 
