--- a/package.json
+++ b/package.json
@@ -4,49 +4,41 @@
   "main": "app.js",
   "author": "jykim",
   "license": "MIT",
-  "eslintConfig": {
-    "extends": [
-      "airbnb",
-      "prettier"
-    ],
-    "rules": {
-      "react/prefer-stateless-function": 0,
-      "react/jsx-filename-extension": 0,
-      "react/jsx-one-expression-per-line": 0
-    },
-    "env": {
-      "browser": true
-    }
-  },
   "dependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.3.1",
-    "eslint": "^6.0.1",
+    "core-js": "3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^6.0.0",
     "fibers": "3.1.1",
+    "gulp-cli": "^2.2.0",
     "jquery": "^3.4.1",
     "node-gyp": "^5.0.1",
+    "popper.js": "1.14.7",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
     "sass": "^1.22.1",
     "webpack-dev-server": "^3.7.1",
+    "webpack-polyfill-injector": "^3.0.2",
     "wepack-cli": "^0.0.1-security"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
-    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "eslint": "5.3.0",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-react": "^7.14.2",
+    "gulp": "^4.0.2",
+    "gulp-eslint": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.35.0",
