--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -9,26 +9,42 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.3.1",
-    "css-loader": "^3.0.0",
-    "eslint-loader": "^2.1.2",
+    "core-js": "3",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "fibers": "3.1.1",
+    "gulp-cli": "^2.2.0",
     "jquery": "^3.4.1",
-    "loadsh": "^0.0.4",
-    "node-sass": "^4.12.0",
+    "node-gyp": "^5.0.1",
+    "popper.js": "1.14.7",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
-    "react-router": "^5.0.1",
-    "sass-loader": "^7.1.0",
-    "webpack": "^4.33.0",
+    "sass": "^1.22.1",
     "webpack-dev-server": "^3.7.1",
+    "webpack-polyfill-injector": "^3.0.2",
     "wepack-cli": "^0.0.1-security"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0"
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "eslint": "5.3.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-mocha": "^5.3.0",
+    "eslint-plugin-react": "^7.14.2",
+    "gulp": "^4.0.2",
+    "gulp-eslint": "^6.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5"
   }
 }
