--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "jykim",
   "license": "MIT",
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
@@ -40,6 +41,8 @@
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "postcss-loader": "^3.0.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5"
