--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -7,7 +7,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "browserslist": [
+    "> 0.2%"
+  ],
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/polyfill": "^7.4.4",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
@@ -20,6 +25,7 @@
     "fibers": "3.1.1",
     "gulp-cli": "^2.2.0",
     "jquery": "^3.4.1",
+    "mini-css-extract-plugin": "^0.7.0",
     "node-gyp": "^5.0.1",
     "popper.js": "1.14.7",
     "react": "^16.8.6",
@@ -43,6 +49,7 @@
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5"
