--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "jykim",
   "license": "MIT",
   "dependencies": {
+    "@babel/cli": "^7.5.5",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
@@ -16,6 +17,7 @@
     "eslint-config-prettier": "^6.0.0",
     "fibers": "3.1.1",
     "gulp-cli": "^2.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.8",
     "jquery": "^3.4.1",
     "node-gyp": "^5.0.1",
     "popper.js": "1.14.7",
@@ -30,7 +32,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-arrow-functions": "^7.2.0",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "eslint": "5.3.0",
     "eslint-plugin-import": "^2.18.0",
@@ -39,7 +45,6 @@
     "eslint-plugin-react": "^7.14.2",
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
-    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "postcss-loader": "^3.0.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
