scss가 안됨 설정 계속 고쳐야함 ㅠ

--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wishDream_Web",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "build:production": "webpack --progress -p --config webpack.config.js"
+    "dev": "webpack --config webpack.config.js --mode development",
+    "build": "webpack --progress -p --config webpack.config.js --mode production"
   },
   "version": "1.0.0",
   "main": "index.js",
@@ -10,7 +10,7 @@
   "dependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/polyfill": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
@@ -24,14 +24,15 @@
     "gulp-cli": "^2.2.0",
     "html-webpack-plugin": "^4.0.0-beta.8",
     "jquery": "^3.4.1",
-    "mini-css-extract-plugin": "^0.7.0",
+    "media-query-plugin": "^1.3.1",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-gyp": "^5.0.1",
     "popper.js": "1.14.7",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
-    "sass": "^1.22.1",
+    "sass": "^1.22.7",
     "webpack-dev-server": "^3.7.1",
     "webpack-polyfill-injector": "^3.0.2",
     "wepack-cli": "^0.0.1-security"
@@ -43,15 +44,26 @@
     "@babel/plugin-transform-arrow-functions": "^7.2.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "astroturf": "^0.9.9",
+    "babel-polyfill": "^6.26.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.3",
+    "cssnano": "^4.1.10",
     "eslint": "5.3.0",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-react": "^7.14.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^4.1.0",
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
+    "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.3",
+    "url-loader": "^2.1.0",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5"
   }
