--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -11,6 +11,7 @@
     "@babel/cli": "^7.5.5",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
+    "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
@@ -28,11 +29,11 @@
     "mini-css-extract-plugin": "^0.8.0",
     "node-gyp": "^5.0.1",
     "popper.js": "1.14.7",
+    "postcss-cli": "^6.1.3",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
-    "sass": "^1.22.7",
     "webpack-dev-server": "^3.7.1",
     "webpack-polyfill-injector": "^3.0.2",
     "wepack-cli": "^0.0.1-security"
@@ -54,12 +55,13 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-react": "^7.14.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "^4.1.0",
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
+    "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.3",
