--- a/wishDream_Web/.babelrc
+++ b/wishDream_Web/.babelrc
@@ -4,9 +4,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    ["@babel/plugin-transform-runtime", {
-        "corejs": 3
-    }],
+    ["@babel/plugin-transform-runtime"],
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-syntax-dynamic-import"
   ]
