--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/cli": "^7.5.5",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
     "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.2",
@@ -66,6 +67,7 @@
     "uglifyjs-webpack-plugin": "^2.1.3",
     "url-loader": "^2.1.0",
     "webpack": "^4.35.0",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.5"
   }
 }
