--- a/wishDream_Core/build.gradle
+++ b/wishDream_Core/build.gradle
@@ -14,8 +14,8 @@ apply plugin: 'io.spring.dependency-management'
 group = 'kr.co.wishDream'
 version = buildVersion
 
-sourceCompatibility = '11'
-targetCompatibility = '11'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 configurations {
 	developmentOnly
