--- a/wishDream_Core/build.gradle
+++ b/wishDream_Core/build.gradle
@@ -3,19 +3,17 @@ plugins {
 	id 'java'
 }
 
-ext {
-	buildVersion = '0.0.1-SNAPSHOT'
-}
 
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'kr.co.wishDream'
-version = buildVersion
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+bootJar { 
+	enabled = false 
+} //단순히 api만 만들고 싶을 경우 추가
+jar { 
+	enabled = true 
+}
 
 configurations {
 	developmentOnly
@@ -27,10 +25,6 @@ configurations {
 	}
 }
 
-repositories {
-	mavenCentral()
-}
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	compileOnly 'org.projectlombok:lombok'
@@ -39,7 +33,6 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 }
-
 
 test {
     ignoreFailures = true
