--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ allprojects {
 	repositories {
 		jcenter()
 		mavenCentral()
+		maven {
+			url 'https://repo.spring.io/milestone'
+		}
 	}
 	
 	dependencies {
@@ -69,7 +72,8 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-webflux'
 		implementation "io.reactivex.rxjava3:rxjava:3.0.0-RC1"
 		// database
-		compile group: 'com.github.davidmoten', name: 'rxjava2-jdbc', version: '0.2.4'
+		//compile group: 'com.github.davidmoten', name: 'rxjava2-jdbc', version: '0.2.4'
+		compile group: 'io.r2dbc', name: 'r2dbc-postgresql', version: '0.8.0.M8'
 		
 		compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 		compileOnly 'org.projectlombok:lombok'
