--- a/wishDream_Web/src/main/resources/application.properties
+++ b/wishDream_Web/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.template-resolver-order=0
 # development mode = false
 spring.thymeleaf.cache=false 
+
+# database config
+wishDream.database.driver=postgresql
+wishDream.database.host=localhost
+wishDream.database.port=5430
+wishDream.database.database=wishDream
+wishDream.database.user=wishDream
+wishDream.database.password=wishDream
