--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-router-native": "^5.0.1",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.22.7",
     "sass-loader": "^7.1.0",
