DB설정중... flyway 스키마 생성 오류 수정ㅇㅅㅇ

--- a/wishDream_Web/src/main/resources/application.properties
+++ b/wishDream_Web/src/main/resources/application.properties
@@ -5,6 +5,11 @@ logging.level.root=WARN
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=DEBUG
 logging.level.tomcat=INFO
+logging.level.org.springframework.data.r2dbc=DEBUG
+
+# error
+server.error.include-exception=true
+server.error.include-stacktrace= never
 
 # view
 spring.thymeleaf.check-template-location=true
@@ -16,7 +21,6 @@ spring.thymeleaf.template-resolver-order=0
 spring.thymeleaf.cache=false 
 
 # database config
-wishDream.database.driver=postgresql
 wishDream.database.host=localhost
 wishDream.database.port=5430
 wishDream.database.database=wishDream
