--- a/wishDream_Core/src/main/resources/application-test.yml
+++ b/wishDream_Core/src/main/resources/application-test.yml
@@ -1,11 +1,8 @@
 wishDream:
   database:
+    url: jdbc:postgresql://localhost:5430/wishDream
     database: wishDream
     host: localhost
     password: wishDream
     port: 5430
     user: wishDream
-spring:
-  r2dbc:
-    url: r2dbc:pool:postgresql://localhost:5430/wishDream    username: wishDream
-    password: wishDream    
