--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
 .gradle
 /build/
+/bin/
 !gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
@@ -35,3 +36,6 @@ node_modules
 ### yarn ###
 yarn-error.log
 /*.lock
+.yarnrc
+4.0.0
+/YarnCachev4/
