디비 에러 수정 Member -> member로 변경 테이블 소문자로 해야 쿼리문 날릴때 번거로움 업음 대소문자 구분 시에 테이블명을 "테이블명" 이렇게 일일이 감싸야해서.

--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ plugins {
 ext {
 	flyway = [
 		url: 'jdbc:postgresql://localhost:5430/wishDream',
-		user: 'wishDream',
-		password: 'wishDream',
+		user: 'wishdream',
+		password: 'wishdream',
 		driver: 'org.postgresql.Driver',
 		schemas: ['public']
 	]
@@ -71,7 +71,7 @@ subprojects {
 	
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter-webflux'
-		implementation "io.reactivex.rxjava3:rxjava:3.0.0-RC1"
+		
 		// database
 		compile group: 'com.github.davidmoten', name: 'rxjava2-jdbc', version: '0.2.4'
 		
