--- a/package.json
+++ b/package.json
@@ -8,15 +8,12 @@
     "@babel/cli": "^7.5.5",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
+    "@babel/register": "^7.5.5",
+    "@babel/runtime-corejs3": "^7.5.5",
     "autoprefixer": "^9.6.1",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "3",
+    "directory-named-webpack-plugin": "^4.0.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^6.0.0",
     "fibers": "3.1.1",
@@ -26,27 +23,25 @@
     "media-query-plugin": "^1.3.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-gyp": "^5.0.1",
-    "popper.js": "1.14.7",
     "postcss-cli": "^6.1.3",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
-    "webpack-dev-server": "^3.7.1",
-    "webpack-polyfill-injector": "^3.0.2",
     "wepack-cli": "^0.0.1-security"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-transform-arrow-functions": "^7.2.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "astroturf": "^0.9.9",
-    "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
+    "core-js": "3",
     "cssnano": "^4.1.10",
     "eslint": "5.3.0",
     "eslint-plugin-import": "^2.18.0",
@@ -62,7 +57,6 @@
     "postcss-loader": "^3.0.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-router-native": "^5.0.1",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.22.7",
     "sass-loader": "^7.1.0",
