--- a/wishDream_Web/.babelrc
+++ b/wishDream_Web/.babelrc
@@ -1,11 +1,13 @@
 {
   "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
+    [ "@babel/env", { "useBuiltIns": "entry" } ],
+    "@babel/react"
   ],
   "plugins": [
-    ["@babel/plugin-transform-runtime"],
+    [ "@babel/plugin-transform-runtime", { "corejs": 3 } ],
     "@babel/plugin-proposal-object-rest-spread",
-    "@babel/plugin-syntax-dynamic-import"
+    "@babel/transform-arrow-functions",
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-jsx"
   ]
 }
