--- a/wishDream_Web/.babelrc
+++ b/wishDream_Web/.babelrc
@@ -1,10 +1,18 @@
 {
   "presets": [
-    [ "@babel/env", { "useBuiltIns": "entry" } ],
+    [ "@babel/env",
+      {
+        "useBuiltIns": "usage",
+        corejs:  {
+            version: 3,
+            proposals: true
+        },
+      },
+    ],
     "@babel/react"
   ],
   "plugins": [
-    [ "@babel/plugin-transform-runtime", { "corejs": 3 } ],
+    "@babel/plugin-transform-runtime",
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/transform-arrow-functions",
     "@babel/plugin-syntax-dynamic-import",
