--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -13,13 +13,15 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/register": "^7.5.5",
+    "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.2.1",
     "autoprefixer": "^9.6.1",
-    "babel-eslint": "^10.0.2",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "directory-named-webpack-plugin": "^4.0.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "fibers": "3.1.1",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^5.0.0",
+    "fibers": "4.0.1",
     "gulp-cli": "^2.2.0",
     "html-webpack-plugin": "^4.0.0-beta.8",
     "jquery": "^3.4.1",
@@ -27,11 +29,9 @@
     "mini-css-extract-plugin": "^0.8.0",
     "node-gyp": "^5.0.1",
     "postcss-cli": "^6.1.3",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.9",
-    "react-dom": "^16.8.6",
-    "react-jss": "^8.6.1",
-    "wepack-cli": "^0.0.1-security"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-jss": "^8.6.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
@@ -40,9 +40,9 @@
     "@babel/plugin-transform-arrow-functions": "^7.2.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "astroturf": "^0.9.9",
+    "astroturf": "^0.9.14",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.3",
+    "copy-webpack-plugin": "^5.0.4",
     "core-js": "3",
     "cssnano": "^4.1.10",
     "eslint": "5.3.0",
@@ -50,23 +50,23 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-mocha": "^5.3.0",
     "eslint-plugin-react": "^7.14.2",
-    "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "file-loader": "^4.1.0",
+    "file-loader": "^4.2.0",
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
+    "html-loader": "^0.5.5",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "resolve-url-loader": "^3.1.0",
-    "sass": "^1.22.7",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.3",
+    "sass": "^1.22.10",
+    "sass-loader": "^7.3.0",
+    "style-loader": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^2.1.0",
-    "webpack": "^4.35.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.5"
+    "webpack": "^4.39.3",
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-cli": "^3.3.7"
   }
 }
