--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "clsx": "^1.0.4",
     "directory-named-webpack-plugin": "^4.0.1",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^5.0.0",
