--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -13,7 +13,7 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/register": "^7.5.5",
-    "@material-ui/core": "^4.4.0",
+    "@material-ui/core": "^4.4.1",
     "@material-ui/icons": "^4.2.1",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
@@ -22,6 +22,7 @@
     "directory-named-webpack-plugin": "^4.0.1",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^5.0.0",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "fibers": "4.0.1",
     "gulp-cli": "^2.2.0",
     "html-webpack-plugin": "^4.0.0-beta.8",
