--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 plugins {
+	id 'java'
+	id 'org.springframework.boot' version '2.2.1.RELEASE' apply false
+ 	id "io.spring.dependency-management" version "1.0.8.RELEASE"
 	id "org.flywaydb.flyway" version "5.2.4"
-		id 'java'
 }
 
 ext {
+	springBootVersion = '2.2.1.RELEASE'
+	springDependMng = '1.0.8.RELEASE' 
 	flyway = [
 		url: 'jdbc:postgresql://localhost:5430/wishDream',
 		user: 'wishdream',
@@ -15,37 +19,58 @@ ext {
 
 allprojects {
 	apply plugin: 'java'
+	apply plugin: 'idea'
+	apply plugin: 'eclipse'
 	
 	group 'kr.co.wishDream'
 	version '0.0.1-SNAPSHOT'
 	
-	sourceCompatibility = 1.8
-	targetCompatibility = 1.8
-	
-	compileJava {
-	   sourceCompatibility = 1.8
-	   targetCompatibility = 1.8
-	}
 	
 	repositories {
 		jcenter()
 		mavenCentral()
-		maven {
-			url 'https://repo.spring.io/milestone'
+		maven {	url 'https://repo.spring.io/milestone' }
+	 	maven { url "https://repo.spring.io/snapshot" }
+	 	gradlePluginPortal()
+	}
+	
+	configurations {
+		developmentOnly
+		runtimeClasspath {
+			extendsFrom developmentOnly
+		}
+		compileOnly {
+			extendsFrom annotationProcessor
 		}
 	}
 	
 	dependencies {
 		compile group: 'org.postgresql', name: 'postgresql', version: '42.2.6'
+		compileOnly 'org.projectlombok:lombok'
+		annotationProcessor 'org.projectlombok:lombok'
+		testCompileOnly 'org.projectlombok:lombok'
+		testAnnotationProcessor 'org.projectlombok:lombok'
 		
 	}
 	
 	[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
+	
+	//exclude common-logging
+	[configurations.runtime, configurations.default]*.exclude(module: 'commons-logging')
 }
 
 subprojects {
-	apply plugin: 'idea'
-	apply plugin: 'org.flywaydb.flyway'
+	apply plugin: 'org.springframework.boot'
+	apply plugin: "io.spring.dependency-management"
+	
+	sourceCompatibility = 12
+	targetCompatibility = 12
+	
+	dependencyManagement {
+		imports {
+			mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
+		}
+	}
 	
 	sourceSets {
 	    main {
@@ -70,20 +95,17 @@ subprojects {
 	
 	
 	dependencies {
-		implementation 'org.springframework.boot:spring-boot-starter-webflux'
-		
-		// database
-		compile group: 'com.github.davidmoten', name: 'rxjava2-jdbc', version: '0.2.4'
-		
-		compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-		compileOnly 'org.projectlombok:lombok'
-		annotationProcessor 'org.projectlombok:lombok'
-		testCompileOnly 'org.projectlombok:lombok'
-		testAnnotationProcessor 'org.projectlombok:lombok'
-		
-		annotationProcessor 'org.projectlombok:lombok'
+		implementation "org.springframework.boot:spring-boot-starter-webflux"
+		compile "org.springframework.boot:spring-boot-starter-security:$springBootVersion"
+		developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 		testImplementation 'io.projectreactor:reactor-test'
+		
+		// database
+		compile group: 'com.github.davidmoten', name: 'rxjava2-jdbc', version: '0.2.5'
+		compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+		
 	}
 	
 	jar {
@@ -99,20 +121,24 @@ flyway {
     password = project.flyway.password
     driver = project.flyway.driver
     schemas = project.flyway.schemas
-    //locations = [ 'classpath:/db/migration' ]
+    locations = [ 'classpath:/db/migration' ] //생성시킬 때
 }
 
 
 task run {
 	println "java-version : ${sourceCompatibility}"
     println "project-version : ${version}"
-	dependsOn gradle.includedBuilds*.task(':clean')
+    
+	dependsOn ':wishDream_Web:clean'
+	dependsOn ':wishDream_Core:clean'
 	println "####################################################"
 	println	""
 	println "        All project completed the clean tasks       "
 	println	""
 	println "####################################################"
-    dependsOn gradle.includedBuilds*.task(':build')
+
+	dependsOn ':wishDream_Web:build'
+    dependsOn ':wishDream_Core:build'
     println	""
     println "        All project completed the build tasks       "
     println	""
@@ -122,6 +148,7 @@ task run {
     println "            flywayMigrate completed                 "
     println	""
     println "####################################################"
+    
 }
 
 defaultTasks 'run'
