--- a/wishDream_Web/build.gradle
+++ b/wishDream_Web/build.gradle
@@ -1,57 +1,28 @@
-plugins {
-	id 'org.springframework.boot' version '2.1.6.RELEASE'
-	id 'java'
-}
-
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'idea'
-
-bootJar {
-  mainClassName = 'kr.co.wishDream.WishDreamWebApplication'
-}
-
+/*
+// running with gradle
 springBoot {
 	mainClassName = 'kr.co.wishDream.WishDreamWebApplication'
 	buildInfo {
 		properties {
-			artifact = 'wishDream-app'
-			version = '0.0.1'
-			group = 'kr.co.wishDream'
-			name = 'WishDream Application'
+			additionalProperties = [
+				'artifact': 'wishDream-app',
+				'version': '0.0.1',
+				'group': 'kr.co.wishDream',
+				'name': 'WishDream Application',
+			]
 		}
 	}
 }
-
-dependencyManagement {
-	imports {
-		mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
-	}
+*/
+bootJar {
+	launchScript()
+	mainClassName = 'kr.co.wishDream.WishDreamWebApplication'
 }
-
-
-configurations {
-	developmentOnly
-	runtimeClasspath {
-		extendsFrom developmentOnly
-	}
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+jar {
+	enabled = false
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	compileOnly 'org.projectlombok:lombok'
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	annotationProcessor 'org.projectlombok:lombok'
-	testCompileOnly 'org.projectlombok:lombok'
-	testAnnotationProcessor 'org.projectlombok:lombok'
-	
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
 	compile project(':wishDream_Core')
 }
 
