spring security webflux 추가 작업중 ###삽질 기록### DelegatingWebFluxConfiguration 이거있으면 WebFlux Security 등록할때 @EnableWebFluxSecurity 등록한 security config class랑 충돌남(빈생성도 안되고 박살남)

--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,9 @@ subprojects {
 		compile "org.springframework.boot:spring-boot-starter-security:$springBootVersion"
 		developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+		compile "io.projectreactor:reactor-core:3.3.0.RELEASE"
+      	testCompile("io.projectreactor:reactor-test:3.3.0.RELEASE")
+
 		compileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
 		testCompileOnly 'org.projectlombok:lombok'
