--- a/wishDream_Web/src/main/resources/application.yml
+++ b/wishDream_Web/src/main/resources/application.yml
@@ -14,6 +14,8 @@ server:
     include-stacktrace: never
   port: 8080
 spring:
+  main:
+    allow-bean-definition-overriding: true
   webflux:
     static-path-pattern: "/static/**"
   resources:
