--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@babel/register": "^7.5.5",
     "@material-ui/core": "^4.4.1",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.6.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "clsx": "^1.0.4",
     "directory-named-webpack-plugin": "^4.0.1",
+    "es-abstract": "^1.16.2",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^2.0.1",
@@ -30,9 +32,14 @@
     "postcss-cli": "^6.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-jss": "^8.6.1"
+    "react-jss": "^8.6.1",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-form": "^8.2.6",
+    "redux-form-material-ui": "^4.3.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
