--- a/wishDream_Web/package.json
+++ b/wishDream_Web/package.json
@@ -13,8 +13,9 @@
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/register": "^7.5.5",
-    "@material-ui/core": "^4.4.1",
-    "@material-ui/icons": "^4.2.1",
+    "@material-ui/core": "^4.7.0",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.6.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
@@ -33,9 +34,14 @@
     "postcss-cli": "^6.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-jss": "^8.6.1"
+    "react-jss": "^8.6.1",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "redux-form": "^8.2.6",
+    "redux-form-material-ui": "^4.3.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
