--- a/wishDream_Web/src/test/resources/application.yml
+++ b/wishDream_Web/src/test/resources/application.yml
@@ -14,6 +14,9 @@ server:
     include-stacktrace: never
   port: 8080
 spring:
+  devtools:
+    restart:
+      enabled: true
   webflux:
     static-path-pattern: "/static/**"
   resources:
