--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-gyp": "^5.0.1",
     "postcss-cli": "^6.1.3",
     "react": "^16.9.0",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.9.0",
     "react-jss": "^8.6.1",
     "react-redux": "^7.1.3",
