--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.6.0",
     "autoprefixer": "^9.6.1",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "clsx": "^1.0.4",
