로그인 인증 작업 중..

--- a/wishDream_Web/src/main/resources/application.yml
+++ b/wishDream_Web/src/main/resources/application.yml
@@ -6,7 +6,7 @@ logging:
         data:
           r2dbc: DEBUG
         web: DEBUG
-    root: WARN
+    root: INFO
     tomcat: INFO
 server:
   error:
