--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-cli": "^2.2.0",
     "html-webpack-plugin": "^4.0.0-beta.8",
     "jquery": "^3.4.1",
+    "material-ui-popup-state": "^1.5.1",
     "media-query-plugin": "^1.3.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-gyp": "^5.0.1",
