--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,8 @@ subprojects {
 		implementation "org.springframework.boot:spring-boot-starter-webflux"
 		implementation "org.springframework.boot:spring-boot-starter-security"
 		developmentOnly 'org.springframework.boot:spring-boot-devtools'
+		
+		implementation 'org.springframework.security:spring-security-oauth2-client:5.2.0.RELEASE'
 
 		implementation "io.projectreactor:reactor-core:3.3.0.RELEASE"
       	testImplementation("io.projectreactor:reactor-test:3.3.0.RELEASE")
@@ -81,6 +83,7 @@ subprojects {
 		// database
 		implementation 'com.github.davidmoten:rxjava2-jdbc:0.2.5'
 		implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+		implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	}
 	
 	sourceSets {
