--- a/package.json
+++ b/package.json
@@ -5,77 +5,78 @@
   "author": "jykim",
   "license": "MIT",
   "dependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/register": "^7.5.5",
-    "@material-ui/core": "^4.4.1",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.6.0",
-    "autoprefixer": "^9.6.1",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/register": "^7.7.7",
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.8.2",
+    "autoprefixer": "^9.7.3",
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "clsx": "^1.0.4",
     "directory-named-webpack-plugin": "^4.0.1",
     "es-abstract": "^1.16.2",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^5.0.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-react-hooks": "^2.0.1",
-    "fibers": "4.0.1",
+    "fibers": "4.0.2",
     "gulp-cli": "^2.2.0",
     "html-webpack-plugin": "^4.0.0-beta.8",
     "jquery": "^3.4.1",
     "material-ui-popup-state": "^1.5.1",
     "media-query-plugin": "^1.3.1",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-gyp": "^5.0.1",
-    "postcss-cli": "^6.1.3",
-    "react": "^16.9.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-gyp": "^6.1.0",
+    "postcss-cli": "^7.1.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-cookie": "^4.0.1",
-    "react-dom": "^16.9.0",
-    "react-jss": "^8.6.1",
+    "react-jss": "^10.0.3",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.4",
+    "react-stomp": "^4.3.0",
+    "redux": "^4.0.5",
     "redux-form": "^8.2.6",
     "redux-form-material-ui": "^4.3.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-jsx": "^7.2.0",
-    "@babel/plugin-transform-arrow-functions": "^7.2.0",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@babel/plugin-syntax-jsx": "^7.7.4",
+    "@babel/plugin-transform-arrow-functions": "^7.7.4",
+    "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.0.0",
-    "astroturf": "^0.9.14",
+    "astroturf": "^0.10.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "core-js": "3",
+    "copy-webpack-plugin": "^5.1.1",
+    "core-js": "3.6.2",
     "cssnano": "^4.1.10",
-    "eslint": "5.3.0",
-    "eslint-plugin-import": "^2.18.0",
+    "eslint": "6.8.0",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-mocha": "^5.3.0",
+    "eslint-plugin-mocha": "^6.2.2",
     "eslint-plugin-react": "^7.14.2",
-    "file-loader": "^4.2.0",
+    "file-loader": "^5.0.2",
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
     "html-loader": "^0.5.5",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "resolve-url-loader": "^3.1.0",
-    "sass": "^1.22.10",
-    "sass-loader": "^7.3.0",
-    "style-loader": "^1.0.0",
+    "resolve-url-loader": "^3.1.1",
+    "sass": "^1.24.4",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.1.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.39.3",
-    "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "^3.3.7"
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10"
   }
 }
